sumando nuevo hero

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 </head>
 <body>
     <img src="../invie/images/header.png" alt="header">
+    <img src="../invie/images/hero.png" alt="hero">
 </body>
 </html>
