se añade la guitarrra acustica

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 <body>
     <img src="../invie/images/header.png" alt="header">
     <img src="../invie/images/hero.png" alt="hero">
+    <img src="../invie/images/acustica.jpg" alt="">
 </body>
 </html>
