--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <img src="../invie/images/header.png" alt="header">
     <img src="../invie/images/hero.png" alt="hero">
     <img src="../invie/images/acustica.jpg" alt="">
+    <img src="../invie/images/clasica.png" alt="">
 </body>
 </html>
