--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
     </style>
 </head>
 <body>
-    <img src="../invie/images/header.png" alt="header">
-    <img src="../invie/images/hero.png" alt="hero">
-    <img src="../invie/images/acustica.jpg" alt="">
-    <img src="../invie/images/clasica.png" alt="">
+    <img src="nueva-version.jpg" alt="">
 </body>
 </html>
