--- a/index.html
+++ b/index.html
@@ -13,12 +13,20 @@
         max-width: 100%;
         vertical-align: top;
     }
+    img#responsive{
+        display: none;
+    }
+    @media screen and (max-width: 768px){
+        img#responsive {
+            display: block;
+        }
+    }
     </style>
 </head>
 <body>
+        <img src="invie-responsive.png" alt="" id='responsive'>
     <img src="../invie/images/header.png" alt="header">
     <img src="../invie/images/hero.png" alt="hero">
     <img src="../invie/images/acustica.jpg" alt="">
-    <img src="../invie/images/clasica.png" alt="">
 </body>
 </html>
